--- a/client/src/components/features/UserActionsBar/UserActionsBar.module.css
+++ b/client/src/components/features/UserActionsBar/UserActionsBar.module.css
@@ -15,7 +15,3 @@
 .container:hover {
   box-shadow: 0 0 0.5rem var(--color-signal);
 }
-
-.icon:hover {
-  color: var(--color-success);
-}
